--- a/views/send.pug
+++ b/views/send.pug
@@ -1,5 +1,7 @@
-title GroupMeme Bot | Message Sent
-h1 Success!
-p Beep Boop sent your message to the group:
-p= message
-img(src= imageUrl)
+head
+	title GroupMeme Bot | Message Sent
+body
+	h1 Success!
+	p Beep Boop sent your message to the group:
+	p= message
+	img(src= imageUrl)
